# semantic_layer_for_nl_to_sql

./: .env.example  .gitignore  README.md  REFLECTION.md  main.py  pyproject.toml  streamlit_app.py
data/: assignment.db  certified_questions.db  chat_history.db  data_settings.json  golden_eval_cases.json  result_feedback.db  schema.json  semantic_layer.json
src/: 01_build_sqllite.py  02_run_sql_on_sqlite.py  03_build_metadata.py  04_semantic_layer_creation.py  __init__.py  analysis_workflow.py  answer_modes.py  benchmark_store.py  cache_store.py  certified_question_store.py  chart_agent.py  chat_store.py  data_settings.py  dataset_onboarding.py  edge_cases.py  entity_search.py  eval.py  evidence.py  feedback_store.py  gemini_client.py  glossary_manager.py  langfuse_tracing.py  logging_config.py  model_config.py  pipeline.py  pipeline_config.py  pipeline_memory.py  pipeline_prompt_builders.py  pipeline_responses.py  pipeline_semantic_context.py  planner.py  prompt.py  read_semantic_layer.py  semantic_layer_creation.py  sqlite_runner.py  synthesis.py
tests/: test_analysis_workflow.py  test_answer_modes.py  test_benchmark_store.py  test_certified_question_store.py  test_clarification_flow.py  test_clarification_script.py  test_data_settings.py  test_dataset_onboarding.py  test_edge_cases.py  test_entity_search.py  test_eval_cli.py  test_feedback_store.py  test_glossary_manager.py  test_sql_runner_safety.py
