[project]
name = "semantic-layer-for-nl-to-sql"
version = "0.1.0"
description = "AP investigation analyst copilot that maps natural-language accounts-payable questions to governed SQLite SQL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=2.0.0",
    "langfuse>=4.6.1",
    "langgraph>=1.1.10",
    "plotly>=6.7.0",
    "sentence-transformers>=3.0.0",
    "sqlglot>=30.8.0",
    "streamlit>=1.45.0",
]
